# Env_Cravers

./: .gitignore  Meta_OpenENV.txt  README.md
triage_env/: .env.example  Dockerfile  FIX_SUMMARY.md  README.md  inference.py  notes.txt  openenv.yaml  pyproject.toml  requirements.txt  simulate_episode.ps1  verify_api.py
triage_env/app/: environment.py
triage_env/app/api/: main.py  routes.py
triage_env/app/core/: config.py  seeds.py  validator.py
triage_env/app/data/: patient_factory.py  scenario_builder.py
triage_env/app/engine/: reward_engine.py  termination.py
triage_env/app/graders/: task_1_grader.py  task_2_grader.py
triage_env/app/tasks/: base_task.py
triage_env/app/utils/: formatters.py  logging.py
triage_env/audit_tests/: comprehensive_audit.py  phase1_structural.py  phase2_reward.py  phase3_grader.py
triage_env/reports/: audit_agent_exploits.md  audit_episode_lifecycle.md  audit_openenv_compliance.md  audit_repo_structure.md  audit_reward_system.md  audit_rl_design.md  audit_state_integrity.md  audit_tasks_and_graders.md  comprehensive_audit.json  environment_status.md  exploit_analysis.md  final_audit.md  grader_analysis.md  hackathon_score_estimate.md  hackathon_scorecard.md  inference_runs.md  log_validation.md  phase1_results.json  phase2_results.json  reward_validation.md  stress_test.md  submission_risk_report.md  system_integrity.md
triage_env/scripts/: launcher.py  verify_fixes.py
triage_env/scripts/debug_tests/: exploit_test.py  test_pipeline.py
triage_env/server/: app.py
triage_env/tests/unit/: test_audit_fixes.py
(+24 files in other folders)
